2.13 / <not released yet>

 - Fixed
   - Opening of body html tag was missing on some pages in image output
     example cgi (examples/vnstat.cgi)
 - New
   - Add database data merge support as --merge (work in progress)
   - Add exit status 2 options to --alert for making it possible to
     differentiate alerts from errors (exit status 1)
   - Add --dbiflist also to vnstati command
   - Image output example cgi (examples/vnstat.cgi) improvements
     - Remove dependency to vnstat command
     - Add option for selecting how many images are shown per row on the index
       page when the database has more than one interface
     - Add option for selecting which image output is used on the index page
       when the database has more than one interface
     - Add options for selecting which interfaces are shown or hidden from the
       index page without disabling access to all interface specific page when
       the database has more than one interface
     - Harmonize layout style between pages


2.12 / 21-Jan-2024

 - Fixed
   - QueryMode documentation in configuration file didn't match implementation
     or man page description
   - Daemon didn't try to import legacy databases when --noadd was used and no
     current version database initially existed resulting in the process
     exiting even when something could have been done
   - Daemon didn't try to import legacy databases when --initdb was used and
     no current version database initially existed, this behaviour can still
     be enabled by using --noadd in combination with --initdb
   - Using --nodaemon and --initdb at the same time didn't result in an error
     being shown
 - New
   - Add 95th percentile output as --95th, also available via --alert, --json,
     --xml and image output, requires 5MinuteHours configuration to be set to
     at least 744 for storing all the necessary data
   - Add --json support for --alert
   - Database queries resulting in error exit with status 1