@@ -1,4 +1,4 @@
-.TH VNSTATI 1 "APRIL 2024" "version 2.13" "User Manuals"
+.TH VNSTATI 1 "JANUARY 2025" "version 2.13" "User Manuals"
 .SH NAME
 vnstati \- image output support for vnStat
 
@@ -20,6 +20,8 @@ vnstati \- image output support for vnStat
 .IR file ]
 .RB [ \-\-days
 .RI [ limit ]]
+.RB [ \-\-db
+.IR file ]
 .RB [ \-\-dbdir
 .IR directory ]
 .RB [ \-\-dbiflist
@@ -167,11 +169,23 @@ parameter is used. All entries stored in the database will be shown if
 is set to 0.
 
 .TP
+.BI "--db " file
+Use
+.I file
+as database file instead of searching for a database from the directory specified in
+the configuration file or the hardcoded default if no configuration file is available.
+This option overrides
+.BR "--dbdir" .
+
+.TP
 .BI "--dbdir " directory
 Use
 .I directory
 as database directory instead of using the directory specified in the configuration
-file or the hardcoded default if no configuration file is available.
+file or the hardcoded default if no configuration file is available. This option is
+ignored if
+.B "--db"
+is also defined.
 
 .TP
 .BI "--dbiflist " [mode]
